# ingredient-parser

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  deny.toml  rust-toolchain.toml  wrangler.toml
.claude/: launch.json  settings.local.json
.config/: nextest.toml
.github/: codecov.yml  renovate.json
.github/workflows/: benchmark-dashboard.yml  benchmark-pr.yml  benchmark.yml  claude-review.yml  claude.yml  deploy-site.yml  rust.yml
demo-site/: .env.example  .eslintrc.cjs  .gitignore  .oxlintrc.json  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
demo-site/public/: index.html
demo-site/src/: App.tsx  DecompositionView.tsx  Demo.tsx  Spinner.tsx  WasmProvider.tsx  config.ts  icons.tsx  index.css  main.tsx  vite-env.d.ts  wasm.ts  wasmContext.ts  wasmContext.tsx
demo-site/src/components/: Scraper.tsx  ui.tsx
demo-site/src/hooks/: url.ts
demo-site/src/lib/: format.tsx
docs/plans/: 2025-12-18-refactor-cleanup-design.md
food-app/: Cargo.toml
food-app/src/: lib.rs  main.rs  persist.rs  theme.rs
food-app/src/tabs/: cookbook.rs  corpus.rs  debug.rs  mod.rs  recipe.rs  test.rs
food-cli/: Cargo.toml
food-cli/src/: corpus_lint.rs  corpus_shadow.rs  explain.rs  main.rs  tables.rs
food-cli/tests/: cli.rs
food_cli/: Cargo.toml
food_cli/src/: main.rs
food_ui/: Cargo.toml
food_ui/src/: lib.rs  main.rs
food_web/: Cargo.toml  Trunk.toml
food_web/.cargo/: config.toml
food_web/assets/: sw.js
food_web/src/: app.rs  lib.rs  main.rs
ingredient-parser/: Cargo.toml  readme.md
ingredient-parser/.claude/skills/corpus-harvest/: SKILL.md
ingredient-parser/.claude/skills/corpus-harvest/references/: corpus-rules.md
ingredient-parser/benches/: parser_benchmarks.rs
ingredient-parser/examples/: custom_parser.rs  parse.rs  rich_text.rs
ingredient-parser/fuzz/: Cargo.toml
ingredient-parser/fuzz/fuzz_targets/: from_str.rs  parse_amount.rs  rich_text.rs
ingredient-parser/src/: error.rs  fraction.rs  ingredient.rs  lib.rs  rich_text.rs  trace.rs  unit_mapping.rs  usage.rs  util.rs
ingredient-parser/src/parser/: helpers.rs  ir.rs  measurement.rs  mod.rs  normalize.rs  paren.rs  pipeline.rs  range.rs  recognize.rs  refine.rs  segment.rs  stage.rs  token.rs  traced.rs  vocab.rs
ingredient-parser/src/parser/measurement/: composite.rs  guards.rs  mod.rs  number.rs  range.rs  single.rs
ingredient-parser/src/parser/normalize/: tests.rs
ingredient-parser/src/parser/paren/: tests.rs
ingredient-parser/src/parser/refine/: alternatives.rs  amounts.rs  prep.rs  recover.rs  tests.rs  units.rs
ingredient-parser/src/trace/: collector.rs  format.rs  jaeger.rs  mod.rs  stages.rs
ingredient-parser/src/unit/: conversion.rs  core.rs  kind.rs  lib.rs  measure.rs  mod.rs  unit.rs
ingredient-parser/tests/: accuracy.rs  accuracy_rich.rs  integration_test.rs  parser.rs  parsing.rs  property.proptest-regressions  property.rs  property_tests.proptest-regressions  property_tests.rs  snapshots.rs  trace.rs  types.rs  units.rs
ingredient-parser/tests/common/: mod.rs
ingredient-parser/tests/corpus/: corpus.jsonl  rich_text.jsonl
ingredient-parser/tests/snapshots/: snapshots__debug_structure_multi_unit.snap  snapshots__display_roundtrip.snap  snapshots__trace_tree.snap
ingredient-wasm/: Cargo.toml
ingredient-wasm/.cargo/: config.toml
ingredient-wasm/src/: lib.rs
ingredient-wasm/tests/: web.rs
recipe-epub/: Cargo.toml
recipe-epub/src/: backend.rs  cache.rs  epub_text.rs  extractor.rs  lib.rs  library.rs
recipe-epub/tests/: integration.rs
recipe-scraper/: Cargo.toml
recipe-scraper-fetcher/: Cargo.toml
recipe-scraper-fetcher/src/: http_utils.rs  lib.rs
recipe-scraper/fuzz/: Cargo.toml
recipe-scraper/fuzz/fuzz_targets/: scrape.rs
recipe-scraper/src/: chefsteps.rs  html.rs  http_utils.rs  ld_json.rs  ld_schema.rs  lib.rs  schema.rs
recipe-scraper/test_data/: chefsteps_rich-and-moist-cornbread.json  diningwithskyler_carbone-spicy-rigatoni-vodka.json  empty.json  food52_85952-nectarine-crumble-recipe.json  justonecookbook_chicken-katsu-don.json  kingarthurbaking_pretzel-focaccia-recipe.html  kingarthurbaking_pretzel-focaccia-recipe.json  malformed.html  missing.html  nytimes_1015819-chocolate-chip-cookies.json  nytimes_1022674-chewy-gingerbread-cookies.html  nytimes_1022674-chewy-gingerbread-cookies.json  nytimes_chocolate_chip_cookies.html  nytimes_doughnuts.html  nytimes_toll-house-chocolate-chip-cookies.html  nytimes_toll-house-chocolate-chip-cookies_parsed.json  omnivorescookbook_sichuan-shrimp-stir-fry.json  seriouseats_grilled_naan.html  seriouseats_grilled_naan.json  seriouseats_pan_pizza.json  smittenkitchen_crispy-tofu-pad-thai.html  thewoksoflife_vietnamese-rice-noodle-salad-chicken.json
recipe-scraper/tests/: integration.rs
recipe-types/: Cargo.toml
recipe-types/src/: lib.rs
recipe_scraper_fetcher/: Cargo.toml
recipe_scraper_fetcher/src/: http_utils.rs  lib.rs
src/: lib.rs  main.rs  rich_text.rs  unit.rs
src/unit/: kind.rs  mod.rs  unit.rs
workers-site/: package-lock.json  package.json
