[workspace]
resolver = "2"

members = [
    "ingredient-wasm",
    "ingredient-parser",
    "recipe-types",
    "recipe-scraper",
    "recipe-scraper-fetcher",
    "recipe-epub",
    "food-cli",
    "food-app",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tokio = { version = "1.47.1", features = ["macros"] }
rstest = "0.26"
thiserror = "2.0"
futures = "0.3.32"
dotenvy = "0.15"
ingredient = { path = "ingredient-parser" }
recipe-types = { path = "recipe-types" }
recipe-scraper = { path = "recipe-scraper" }
recipe-epub = { path = "recipe-epub" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

# WASM size optimization is handled by wasm-pack/wasm-opt, not Rust compiler flags

# Optimize dependencies even in debug builds for better development experience
[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 1  # Light optimization for faster test execution
