[workspace]
resolver = "2"

members = [
    "ingredient-wasm",
    "ingredient-parser",
    "recipe-types",
    "recipe-scraper",
    "recipe-scraper-fetcher",
    "recipe-epub",
    "food-cli",
    "food-app",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tokio = { version = "1.47.1", features = ["macros"] }
rstest = "0.26"
thiserror = "2.0"
futures = "0.3.32"
dotenvy = "0.15"
miette = { version = "7", features = ["fancy"] }
tabled = "0.21"
ingredient = { path = "ingredient-parser" }
recipe-types = { path = "recipe-types" }
recipe-scraper = { path = "recipe-scraper" }
recipe-scraper-fetcher = { path = "recipe-scraper-fetcher" }
recipe-epub = { path = "recipe-epub" }

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
# One stable, already-clean quality lint. NOTE: CI runs clippy with `-D warnings`,
# so a "warn" here is effectively enforced. Deliberately NOT enabling nursery
# lints (e.g. `redundant_clone`) — a future clippy false positive would break CI —
# nor `missing_docs`, which would require full pub-item doc coverage to stay green.
uninlined_format_args = "warn"

# Release profile tuned for the wasm consumer: LTO + a single codegen unit let the
# linker drop cross-crate dead code, `panic = "abort"` removes unwind tables (the
# workspace `panic = "deny"` lint only forbids the macro, not the unwinding
# machinery), and `opt-level = "z"` favors download size over raw speed. wasm-opt
# still runs on top of this via wasm-pack.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

# Optimize dependencies even in debug builds for better development experience
[profile.dev.package."*"]
opt-level = 2

[profile.test]
opt-level = 1  # Light optimization for faster test execution
