[package]
name = "food-app"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# catppuccin-egui = { git = "https://github.com/catppuccin/egui", branch = "main" }
egui_extras = { version = "0.34.0", features = ["image", "http"] }
eframe = "0.34.0"
ehttp = "0.7.0"
image = { version = "0.25.1", default-features = false, features = ["jpeg"] }
poll-promise = "0.3"
recipe-scraper.workspace = true
ingredient.workspace = true
serde_json.workspace = true
egui_ltreeview = "0.7"
rand = "0.10.0"
tracing.workspace = true
tracing-wasm = "0.2.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
# Cookbook (EPUB) tab — native only.
recipe-epub.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
# Load AI gateway creds from a repo-root .env on startup (native only).
dotenvy.workspace = true
# Recipe-reference digraph in the Cookbook tab (native only).
egui_graphs = "0.30"
petgraph = "0.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"

[lints]
workspace = true
