[package]
name = "food-cli"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
clap = {version="4.5.4", features=["derive"]}
recipe-scraper-fetcher.workspace = true
recipe-epub.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
serde_json.workspace = true
ingredient.workspace = true
dotenvy.workspace = true
open = "5"
maud = "0.27"  # compile-time, auto-escaping HTML for the corpus table

[lints]
workspace = true
