[package]
name = "food-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT"
publish = false

[dependencies]
clap = {version="4.5.4", features=["derive"]}
recipe-scraper-fetcher.workspace = true
recipe-epub.workspace = true
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
serde.workspace = true # corpus-row deserialization for `corpus shadow`
serde_json.workspace = true
ingredient.workspace = true
dotenvy.workspace = true
open = "5"
maud = "0.27"  # compile-time, auto-escaping HTML for the corpus table
miette.workspace = true # rich --explain diagnostics with source carets
tabled.workspace = true # pretty CLI tables
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # surface extractor warns (chunk skips, escalation) via RUST_LOG

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true

[lints]
workspace = true
