[package]
name = "food_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# catppuccin-egui = { git = "https://github.com/catppuccin/egui", branch = "main" }
egui_extras = { version = "0.27.2", features = ["image", "http"] }
eframe = "0.24"
ehttp = "0.3"
image = { version = "0.24", default-features = false, features = ["jpeg"] }
poll-promise = "0.3"
recipe-scraper = { path = "../recipe-scraper" }
ingredient = { path = "../ingredient-parser" }
serde_json = "1.0"
rand = "0.8.5"
tracing = "0.1.40"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
