[package]
name = "ingredient"
version = "0.3.0"
authors = ["nickysemenza"]
edition = "2021"
description = "recipe ingredient parser"
license = "MIT"
repository = "https://github.com/nickysemenza/ingredient-parser"
readme = "README.md"


[features]
default = ["serde-derive"]
serde-derive = ["serde/derive"]
bench = ["dep:criterion"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json.workspace = true
tracing.workspace = true
petgraph = "0.8.0"
nom-language = "0.1.0"
once_cell = "1.19"
regex = "1.10"
criterion = { version = "0.8", features = ["html_reports"], optional = true }


[dependencies.nom]
version = "8.0.0"
default-features = false
features = ["alloc"]

[dev-dependencies]
proptest = "1.5"
rstest.workspace = true

[[bench]]
name = "parser_benchmarks"
harness = false
required-features = ["bench"]

[lints]
workspace = true
