[package]
name = "ingredient"
version = "0.3.0"
authors = ["nickysemenza"]
edition = "2021"
rust-version = "1.85"
description = "recipe ingredient parser"
license = "MIT"
repository = "https://github.com/nickysemenza/ingredient-parser"
# NOTE: git tracks the file as lowercase `readme.md`; the path must match
# exactly or `cargo package`/`publish` fails on case-sensitive filesystems.
readme = "readme.md"


[features]
default = []
# No-op kept for backward compatibility: serde support used to be optional
# behind this feature, but the crate's types always required serde in practice
# (serde_json is a hard dependency), so serde is now unconditional.
serde-derive = []
bench = ["dep:criterion"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
petgraph = "0.8.0"
nom-language = "0.1.0"
regex = "1.10"
num-rational = { version = "0.4", default-features = false }
num-traits = "0.2"
thiserror.workspace = true
criterion = { version = "0.8", features = ["html_reports"], optional = true }


[dependencies.nom]
version = "8.0.0"
default-features = false
features = ["alloc"]

[dev-dependencies]
proptest = "1.5"
rstest.workspace = true
insta = "1"

[[bench]]
name = "parser_benchmarks"
harness = false
required-features = ["bench"]

[lints]
workspace = true
