[package]
name = "ingredient"
version = "0.3.0"
authors = ["nickysemenza"]
edition.workspace = true
rust-version.workspace = true
description = "recipe ingredient parser"
license = "MIT"
repository = "https://github.com/nickysemenza/ingredient-parser"
# NOTE: git tracks the file as lowercase `readme.md`; the path must match
# exactly or `cargo package`/`publish` fails on case-sensitive filesystems.
readme = "readme.md"


[features]
default = []
bench = ["dep:criterion"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
petgraph = "0.8.0"
nom-language = "0.1.0"
regex = "1.10"
num-rational = { version = "0.4", default-features = false }
num-traits = "0.2"
thiserror.workspace = true
criterion = { version = "0.8", features = ["html_reports"], optional = true }


[dependencies.nom]
version = "8.0.0"
default-features = false
features = ["alloc"]

[dev-dependencies]
proptest = "1.5"
rstest.workspace = true
insta = "1"

[[bench]]
name = "parser_benchmarks"
harness = false
required-features = ["bench"]

[lints]
workspace = true
