[package]
name = "ingredient-wasm"
version = "0.1.0"
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "0.2.100", features = ["serde-serialize"] }
ingredient.workspace = true
recipe-scraper.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
tracing.workspace = true
wasm-tracing = "2.1"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
