[package]
name = "ingredient-wasm"
version = "0.1.0"
authors = ["Nicky Semenza <nicky@nickysemenza.com>"]
edition = "2021"
license = "MIT"
publish = false

# Recent rustc emits WASM using reference-types/bulk-memory (e.g. multiple
# tables). Older `wasm-opt` builds (as shipped by the CI wasm-pack) reject that
# in MVP mode with "Only 1 table definition allowed in MVP". Enable the features
# so wasm-opt accepts it, while keeping `-O` size optimization.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O', '--enable-reference-types', '--enable-bulk-memory']

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
ingredient.workspace = true
recipe-scraper.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.6"
# Generates the boundary `.d.ts` from the Rust structs below (replacing the old
# hand-written `typescript_custom_section`). The `From<upstream>` impls are the
# compile-time drift check against the core crates. "js" routes the wasm ABI
# through serde-wasm-bindgen, matching how this crate already crosses the boundary.
tsify-next = { version = "0.5", features = ["js"] }
js-sys = "0.3"
tracing.workspace = true
wasm-tracing = "2.1"


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints]
workspace = true
