[package]
name = "recipe-scraper-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.13.0"
reqwest-tracing = "0.7.0"
reqwest-middleware = "0.5.0"
task-local-extensions = "0.1.4"
tokio.workspace = true
tracing.workspace = true
recipe-scraper.workspace = true
http = "1.1.0"

[lints]
workspace = true
