[package]
name = "recipe-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.20.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1.40"
ingredient= {path = "../ingredient-parser"}
[dev-dependencies]
pretty_assertions = "1"
# https://github.com/serde-rs/serde/pull/1544#issuecomment-1244798727
# [patch.crates-io]
# serde_derive = { git = "https://github.com/kurtbuilds/serde" }