[package]
name = "recipe-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.25.0"
serde_json.workspace = true
serde.workspace = true
thiserror = "2.0"
tracing.workspace = true
ingredient.workspace = true
[dev-dependencies]
pretty_assertions = "1"
rstest.workspace = true
# https://github.com/serde-rs/serde/pull/1544#issuecomment-1244798727
# [patch.crates-io]
# serde_derive = { git = "https://github.com/kurtbuilds/serde" }

[lints]
workspace = true
