[package]
name = "recipe-scraper"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.27.0"
html-escape = "0.2"
url = "2"
serde_json.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
ingredient.workspace = true
recipe-types.workspace = true
[dev-dependencies]
pretty_assertions = "1"
rstest.workspace = true
# https://github.com/serde-rs/serde/pull/1544#issuecomment-1244798727
# [patch.crates-io]
# serde_derive = { git = "https://github.com/kurtbuilds/serde" }

[lints]
workspace = true
