[package]
name = "recipe_scraper_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest  = "0.11" 
reqwest-tracing ="0.3.1"
reqwest-middleware ="0.1.6"
task-local-extensions = "0.1.3"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.36"
recipe-scraper = {path= "../recipe-scraper"}