[package]
name = "recipe_scraper_fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest  = "0.11" 
reqwest-tracing ="0.4.6"
reqwest-middleware ="0.2.3"
task-local-extensions = "0.1.4"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1.40"
recipe-scraper = {path= "../recipe-scraper"}
